feat: Implement core subscription management with detail view, add/edit/delete functionality, authentication, and i18n.

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,165 +1,196 @@
 {
-    "app": {
-        "name": "Zombie Subscriptions",
-        "tagline": "Stop losing money to forgotten renewals"
+  "app": {
+    "name": "Zombie Subscriptions",
+    "tagline": "Stop losing money to forgotten renewals"
+  },
+  "common": {
+    "save": "Save",
+    "cancel": "Cancel",
+    "delete": "Delete",
+    "edit": "Edit",
+    "add": "Add",
+    "done": "Done",
+    "back": "Back",
+    "next": "Next",
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "confirm": "Confirm",
+    "yes": "Yes",
+    "no": "No",
+    "ok": "OK",
+    "search": "Search",
+    "noResults": "No results found"
+  },
+  "tabs": {
+    "dashboard": "Dashboard",
+    "add": "Add",
+    "settings": "Settings"
+  },
+  "dashboard": {
+    "title": "Your Subscriptions",
+    "empty": {
+      "title": "No subscriptions yet",
+      "subtitle": "Add your first subscription to start tracking"
     },
-    "common": {
-        "save": "Save",
-        "cancel": "Cancel",
-        "delete": "Delete",
-        "edit": "Edit",
-        "add": "Add",
-        "done": "Done",
-        "back": "Back",
-        "next": "Next",
-        "loading": "Loading...",
-        "error": "Error",
-        "success": "Success",
-        "confirm": "Confirm",
-        "yes": "Yes",
-        "no": "No",
-        "ok": "OK",
-        "search": "Search",
-        "noResults": "No results found"
+    "burnRate": {
+      "title": "Monthly Burn Rate",
+      "subtitle": "Total cost per month",
+      "yearly": "/year",
+      "yearlyForecast": "Yearly Estimate",
+      "activeSubscriptions": "Active Subs"
     },
-    "tabs": {
-        "dashboard": "Dashboard",
-        "add": "Add",
-        "settings": "Settings"
+    "renewingSoon": "Renewing Soon",
+    "active": "Active",
+    "expired": "Expired"
+  },
+  "subscription": {
+    "add": {
+      "title": "Add Subscription",
+      "namePlaceholder": "Subscription Name",
+      "nameExample": "e.g. Netflix",
+      "pricePlaceholder": "Monthly Price",
+      "priceExample": "0.00",
+      "currencyLabel": "Currency",
+      "category": "Category",
+      "submit": "Add Subscription",
+      "success": "Added {{name}} for {{price}}",
+      "error": "Failed to add subscription"
     },
-    "dashboard": {
-        "title": "Your Subscriptions",
-        "empty": {
-            "title": "No subscriptions yet",
-            "subtitle": "Add your first subscription to start tracking"
-        },
-        "burnRate": {
-            "title": "Monthly Burn Rate",
-            "subtitle": "Total cost per month"
-        },
-        "renewingSoon": "Renewing Soon",
-        "active": "Active",
-        "expired": "Expired"
+    "detail": {
+      "title": "Subscription Details",
+      "renewalDate": "Renewal Date",
+      "renewalDatePlaceholder": "YYYY-MM-DD",
+      "notes": "Notes",
+      "delete": "Delete Subscription",
+      "deleteConfirm": "Are you sure you want to delete {{name}}?",
+      "notFound": "Subscription not found",
+      "renewsToday": "Renews today",
+      "renewsTomorrow": "Renews tomorrow",
+      "renewsIn": "Renews in {{days}} days",
+      "expired": "Expired {{days}} days ago",
+      "updateSuccess": "Subscription updated successfully"
     },
-    "subscription": {
-        "add": {
-            "title": "Add Subscription",
-            "namePlaceholder": "Subscription name (e.g., Netflix)",
-            "pricePlaceholder": "Price",
-            "selectCurrency": "Select currency",
-            "renewalDate": "Renewal date",
-            "category": "Category (optional)",
-            "notes": "Notes (optional)"
-        },
-        "detail": {
-            "title": "Subscription Details",
-            "renewsIn": "Renews in {{days}} days",
-            "renewsTomorrow": "Renews tomorrow!",
-            "renewsToday": "Renews today!",
-            "expired": "Expired {{days}} days ago"
-        },
-        "categories": {
-            "streaming": "Streaming",
-            "productivity": "Productivity",
-            "cloud": "Cloud Storage",
-            "design": "Design",
-            "development": "Development",
-            "marketing": "Marketing",
-            "finance": "Finance",
-            "other": "Other"
-        },
-        "status": {
-            "active": "Active",
-            "expiringSoon": "Expiring Soon",
-            "expired": "Expired",
-            "paused": "Paused"
-        }
+    "categories": {
+      "streaming": "Streaming",
+      "productivity": "Productivity",
+      "cloud": "Cloud Storage",
+      "design": "Design",
+      "development": "Development",
+      "marketing": "Marketing",
+      "finance": "Finance",
+      "other": "Other"
     },
-    "settings": {
-        "title": "Settings",
-        "appearance": {
-            "title": "Appearance",
-            "theme": "Theme",
-            "light": "Light",
-            "dark": "Dark",
-            "system": "System"
-        },
-        "language": {
-            "title": "Language",
-            "select": "Select language"
-        },
-        "currency": {
-            "title": "Default Currency",
-            "select": "Select currency"
-        },
-        "notifications": {
-            "title": "Notifications",
-            "push": "Push notifications",
-            "email": "Email reminders",
-            "reminder7days": "Remind 7 days before",
-            "reminder1day": "Remind 1 day before"
-        },
-        "account": {
-            "title": "Account",
-            "signOut": "Sign Out",
-            "deleteAccount": "Delete Account"
-        },
-        "pro": {
-            "title": "Upgrade to Pro",
-            "subtitle": "Unlock unlimited subscriptions & reminders",
-            "features": {
-                "unlimited": "Unlimited subscriptions",
-                "reminders": "Automated reminders",
-                "languages": "All languages",
-                "currencies": "All currencies",
-                "export": "CSV export"
-            },
-            "upgrade": "Upgrade Now"
-        },
-        "about": {
-            "title": "About",
-            "version": "Version",
-            "privacy": "Privacy Policy",
-            "terms": "Terms of Service"
-        }
+    "status": {
+      "active": "Active",
+      "expiringSoon": "Expiring Soon",
+      "expired": "Expired",
+      "paused": "Paused"
+    }
+  },
+  "settings": {
+    "title": "Settings",
+    "appearance": {
+      "title": "Appearance",
+      "theme": "Theme",
+      "light": "Light",
+      "dark": "Dark",
+      "system": "System"
     },
-    "auth": {
-        "signIn": {
-            "title": "Welcome Back",
-            "subtitle": "Sign in to your account",
-            "email": "Email",
-            "password": "Password",
-            "forgotPassword": "Forgot password?",
-            "button": "Sign In",
-            "noAccount": "Don't have an account?",
-            "signUp": "Sign Up"
-        },
-        "signUp": {
-            "title": "Create Account",
-            "subtitle": "Start tracking your subscriptions",
-            "email": "Email",
-            "password": "Password",
-            "confirmPassword": "Confirm password",
-            "button": "Create Account",
-            "hasAccount": "Already have an account?",
-            "signIn": "Sign In"
-        }
+    "language": {
+      "title": "Language",
+      "select": "Select language"
+    },
+    "currency": {
+      "title": "Default Currency",
+      "select": "Select currency"
     },
     "notifications": {
-        "reminder7days": "Your {{name}} subscription renews in 7 days",
-        "reminder1day": "⚠️ {{name}} renews tomorrow!",
-        "renewalToday": "🔔 {{name}} renews today"
+      "title": "Notifications",
+      "push": "Push notifications",
+      "email": "Email reminders",
+      "reminder7days": "Remind 7 days before",
+      "reminder1day": "Remind 1 day before"
     },
-    "errors": {
-        "required": "This field is required",
-        "invalidEmail": "Please enter a valid email",
-        "passwordMin": "Password must be at least 8 characters",
-        "passwordMatch": "Passwords do not match",
-        "generic": "Something went wrong. Please try again."
+    "account": {
+      "title": "Account",
+      "emailLabel": "Email",
+      "signOut": "Sign Out",
+      "signOutConfirm": "Are you sure you want to sign out?",
+      "deleteAccount": "Delete Account",
+      "syncMessage": "Sign in to sync your data across devices"
     },
-    "paywall": {
-        "title": "Free Tier Limit",
-        "message": "You've reached the limit of 3 subscriptions on the free tier",
-        "upgrade": "Upgrade to Pro"
+    "pro": {
+      "title": "Upgrade to Pro",
+      "subtitle": "Unlock unlimited subscriptions & reminders",
+      "export": "Export Subscriptions",
+      "exportSubtitle": "Save your data as CSV",
+      "exportSuccess": "Export successful",
+      "exportFailed": "Export failed",
+      "noData": "No Data",
+      "noDataMessage": "Add some subscriptions first to export.",
+      "features": {
+        "unlimited": "Unlimited subscriptions",
+        "reminders": "Automated reminders",
+        "languages": "All languages",
+        "currencies": "All currencies",
+        "export": "CSV export"
+      },
+      "upgrade": "Upgrade Now"
+    },
+    "data": {
+      "title": "Data Management",
+      "export": "Export Data",
+      "clear": "Clear All Data"
+    },
+    "about": {
+      "title": "About",
+      "version": "Version",
+      "privacy": "Privacy Policy",
+      "terms": "Terms of Service"
+    },
+    "footer": {
+      "tagline": "Zombie Subscriptions",
+      "madeBy": "Made with ❤️ for freelancers"
     }
+  },
+  "auth": {
+    "signIn": {
+      "title": "Welcome Back",
+      "subtitle": "Sign in to your account",
+      "email": "Email",
+      "password": "Password",
+      "forgotPassword": "Forgot password?",
+      "button": "Sign In",
+      "noAccount": "Don't have an account?",
+      "signUp": "Sign Up"
+    },
+    "signUp": {
+      "title": "Create Account",
+      "subtitle": "Start tracking your subscriptions",
+      "email": "Email",
+      "password": "Password",
+      "confirmPassword": "Confirm password",
+      "button": "Create Account",
+      "hasAccount": "Already have an account?",
+      "signIn": "Sign In"
+    }
+  },
+  "notifications": {
+    "reminder7days": "Your {{name}} subscription renews in 7 days",
+    "reminder1day": "⚠️ {{name}} renews tomorrow!",
+    "renewalToday": "🔔 {{name}} renews today"
+  },
+  "errors": {
+    "required": "This field is required",
+    "invalidEmail": "Please enter a valid email",
+    "passwordMin": "Password must be at least 8 characters",
+    "passwordMatch": "Passwords do not match",
+    "generic": "Something went wrong. Please try again."
+  },
+  "paywall": {
+    "title": "Free Tier Limit",
+    "message": "You've reached the limit of 3 subscriptions on the free tier",
+    "upgrade": "Upgrade to Pro"
+  }
 }
